--- a/Soutenance/soutenance.tex
+++ b/Soutenance/soutenance.tex
@@ -45,7 +45,7 @@
 
 \hypersetup{pdfstartview=Fit}
 
-\title[\textsc{Ernest'O'Clock}]{Projet de Systèmes Numériques}
+\title[{\includegraphics[width=1.3cm, height=1.3cm]{../Rapport/logo} \\ \textsc{Ernest'O'Clock}}]{Projet de Systèmes Numériques}
 \date{}
 \author[\textsc{Fournier}, \textsc{Schabanel}, \textsc{Vivien}]{Paul \textsc{Fournier}, Juliette \textsc{Schabanel}, Samuel \textsc{Vivien}}
 
