--- a/Rapport/rapport_complet.tex
+++ b/Rapport/rapport_complet.tex
@@ -4,6 +4,7 @@
 
 \usepackage{pfmath}
 \usepackage{listings}
+\usepackage{graphicx}
 
 
 \title{Systèmes numériques - \textsc{Ernest'O'Clock}}
@@ -25,7 +26,14 @@
 	\selectlanguage{french}
 	\pagenumbering{gobble}
 	\maketitle
+	
+	\begin{figure}[h]
+		\centering
+		\includegraphics[width=0.7\linewidth]{logo}
+	\end{figure}
+	
 	\pagebreak
+	
 	\pagenumbering{roman}
 	\tableofcontents
 	\pagebreak
